# seotool

./: .gitignore  AI_SEO_TOOL_PROMPT_BOOK.md  README.md  docker-compose.yml
backend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  crawl_result.json  cwv_test_results.json  package-lock.json  package.json  tsconfig.crawler.json  tsconfig.json  vitest.config.ts
docs/: IMPLEMENTATION_SECTIONS_0.1_15_16_17.md
frontend/: README.md  next.config.js  package-lock.json  package.json
scripts/: setup-database.sh  start-services.sh  start-workers.sh  test-pagespeed.sh
workers/: note.txt
workers/keyword_intelligence/: .env.example  .gitignore  Dockerfile  README.md  REVIEW_FIXES.md  pyproject.toml
workers/keyword_intelligence/src/: __init__.py  __main__.py  agent.py  config.py  main.py  task_runner.py
workers/keyword_intelligence/src/adapters/: __init__.py  mock.py  openai.py
workers/keyword_intelligence/src/api/: __init__.py  dependencies.py  routes.py  schemas.py
workers/keyword_intelligence/src/domain/: __init__.py  dto.py  models.py
workers/keyword_intelligence/src/infrastructure/: __init__.py  repository.py  vector_storage.py
workers/keyword_intelligence/src/repositories/: __init__.py  postgres.py
workers/keyword_intelligence/src/services/: __init__.py  cluster_service.py  embedding_service.py  intent_classifier.py  llm_client.py  normalizer.py
workers/keyword_intelligence/tests/: conftest.py  test_cluster_service.py  test_determinism.py  test_intent_classifier.py  test_normalizer.py
workers/monitoring_agent/: README.md  pyproject.toml
workers/monitoring_agent/monitoring_agent/: __init__.py  agent_runner.py  config.py  main.py  models.py
workers/monitoring_agent/monitoring_agent/alerting/: __init__.py  alert_manager.py
workers/monitoring_agent/monitoring_agent/anomaly_detection/: __init__.py  detector.py
workers/monitoring_agent/monitoring_agent/forecasting/: __init__.py  forecaster.py
workers/monitoring_agent/monitoring_agent/ingestion/: __init__.py  base.py  mock_ga.py  mock_gsc.py
workers/monitoring_agent/monitoring_agent/repositories/: __init__.py  time_series_store.py
workers/monitoring_agent/tests/: __init__.py  test_agent_runner.py  test_alert_manager.py  test_anomaly_detector.py  test_forecaster.py
(+475 files in other folders)
